<Button xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="#EC5353"
    android:drawablePadding="8dp"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:id="@+id/button_job_offers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/job_offer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/job_offer_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/job_offer_remuneration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remuneration"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</Button>