<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.ocr1.jobsnow.LoginActivity">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/jobslogo"
        android:adjustViewBounds="true"/>

    <ImageView
        android:id="@+id/titleLabelTv"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_above="@id/emailTil"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO"
        android:src="@drawable/welcomelogo" />

    <!--
    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabelTv"
        android:layout_centerHorizontal="true"
        android:text="@string/description_login_text" />
        style="@style/TextAppearance.MaterialComponents.Caption"/>
        -->

    <!--Identifiant-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/passwordTil"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Mot de Passe-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Login-->
    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTil"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFEC5353"
        android:text="@string/submit_button_connection" />

    <!--Créer compte-->
    <Button
        android:id="@+id/NoAccountTv"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFEC5353"
        android:padding="5dp"
        android:text="@string/create_account_proposition"
        android:textColor="#212121"
        tools:ignore="TextContrastCheck" />




</RelativeLayout>